--- a/CVWS2/Homework.ipynb
+++ b/CVWS2/Homework.ipynb
@@ -211,7 +211,7 @@
    "source": [
     "# Task 4\n",
     "\n",
-    "![Result](\"eye_detector.png\")"
+    "![Result](\"eye_detector.png\" test)"
    ],
    "metadata": {}
   }
